Added bait support, working on Zip

--- a/config/locales/repository.en.yml
+++ b/config/locales/repository.en.yml
@@ -1,3 +1,4 @@
 en:
   repository:
-    export_to_repository: "Store copy in repository"
+    repository_log: "Repository Log"
+    deposit: "Deposit in "
