improved formatting of repository data, added extra fields following discussion with Richard / DCC

--- a/config/locales/repository.en.yml
+++ b/config/locales/repository.en.yml
@@ -2,3 +2,14 @@ en:
   repository:
     repository_log: "Latest deposits"
     deposit: "Deposit in "
+    automatic_deposit_types: "File types to use when depositing to the repository"
+    automatic_metadata_deposit: "Automatically deposit metadata whenever a plan is created"
+    actions_log: "Repository Actions Log"
+    deposit_pdf: ".PDF"
+    deposit_html: ".HTML"
+    deposit_csv: ".CSV"
+    deposit_txt: ".TXT"
+    deposit_xml: ".XML"
+    deposit_xlsx: ".XLSX (Microsoft Excel)"
+    deposit_docx: ".DOCX (Microsoft Word)"
+    deposit_rtf: ".RTF (Rich Text Format)"
