--- a/config/locales/repository.en.yml
+++ b/config/locales/repository.en.yml
@@ -1,15 +1,21 @@
 en:
-  repository:
-    repository_log: "Latest deposits"
-    deposit: "Deposit in "
-    automatic_deposit_types: "File types to use when depositing to the repository"
-    automatic_metadata_deposit: "Automatically deposit metadata whenever a plan is created"
-    actions_log: "Repository Actions Log"
-    deposit_pdf: ".PDF"
-    deposit_html: ".HTML"
-    deposit_csv: ".CSV"
-    deposit_txt: ".TXT"
-    deposit_xml: ".XML"
-    deposit_xlsx: ".XLSX (Microsoft Excel)"
-    deposit_docx: ".DOCX (Microsoft Word)"
-    deposit_rtf: ".RTF (Rich Text Format)"
+    repository:
+
+        title:
+            details: "Repository details"
+            log: "Latest Repository Activity"
+            filetypes: "File types to use when depositing to the repository"
+
+        label:
+            deposit_in: "Deposit in "    
+            create_metadata_with_new_plan: "Automatically deposit metadata whenever a plan is created"
+
+        filetype:
+            pdf: ".PDF"
+            html: ".HTML"
+            csv: ".CSV"
+            txt: ".TXT"
+            xml: ".XML"
+            xlsx: ".XLSX (Microsoft Excel)"
+            docx: ".DOCX (Microsoft Word)"
+            rtf: ".RTF (Rich Text Format)"
