Fixed bug in plans.rb validation/saving; moved sword fields to plan level, export working for all filetypes, added rdf filetype, improved layouts

--- a/config/locales/repository.en.yml
+++ b/config/locales/repository.en.yml
@@ -5,12 +5,17 @@ en:
             details: "Repository details"
             log: "Latest Repository Activity"
             filetypes: "File types to use when depositing to the repository"
+            plans: "Associated plans"
 
         label:
             deposit_in: "Deposit in "    
             create_metadata_with_new_plan: "Automatically deposit metadata whenever a plan is created"
+            status: "Repository status"
+            repository: "Repository"
+            duplicated_from: "Duplicated From"
 
         filetype:
+            rdf: ".RDF (Metadata)"
             pdf: ".PDF"
             html: ".HTML"
             csv: ".CSV"
