--- a/config/locales/dmp.en.yml
+++ b/config/locales/dmp.en.yml
@@ -1,7 +1,7 @@
 en:
   dmp:
     title: "DMP Online"
-    strapline: "The DCC Data Management Planning Tool"
+    strapline: "The ANDS adapted DCC's Data Management Planning Tool"
     jisc_funded: "Funded by JISC"
     return_plans: "Return to a saved plan"
     start_plan: "Start a new plan"    
@@ -13,7 +13,7 @@ en:
     rss_description: "News from the DCC Data Management Planning Tool"
     download: "Download"
 
-    dcc_questions: "DCC Questions"
+    dcc_questions: "ANDS recommended Questions"
     template_question: "Template Question"
     template_section: "Section %{n}"
     
@@ -52,9 +52,9 @@ en:
     phase_changed: "Phase changed"
     loading: "Retrieving data..."
     guidance_available: "Guidance available"
-    dcc_equivalent: "DCC Checklist"
-    no_dcc_equivalent: "(No DCC Equivalent)"
-    dcc_guidance: "DCC Guidance"
+    dcc_equivalent: "ANDS Template"
+    no_dcc_equivalent: "(No ANDS Template Equivalent)"
+    dcc_guidance: "ANDS Guidance"
     your_input: "Your Input"
     applies_to: "Templates"
     insert_bp: "Insert standard text"
@@ -86,8 +86,8 @@ en:
     signatures: "Signatures"
     signature_hint: "If required, you can include signature lines at the foot of your DMP for formal validation/adoption.  Please enter the number of signature lines required here."
     include_dcc_numbering: "Include numbering against DMP Checklist questions, eg. DCC 4.1.1"
-    include_dcc_questions: "Include DMP Checklist question text"
-    title_dcc_numbering: "DCC Numbering"
+    include_dcc_questions: "Include DMP ANDS Template question text"
+    title_dcc_numbering: "ANDS Numbering"
     title_dcc_questions: "Checklist Question"
     page_layout: "Page Layout"
     reorder_questions: "Re-order and select questions for export"
@@ -169,8 +169,8 @@ en:
       review_users: "Review users"
       report_new_users: "Rate of user sign-up"
       report_new_plans: "Rate of DMP generation"
-      report_dcc_qs: "List of DCC questions"
-      report_dcc_qs_guidance: "List DCC questions with guidance"
+      report_dcc_qs: "List of ANDS Template questions"
+      report_dcc_qs_guidance: "List ANDS Template questions with guidance"
       select_mappings: "Select mappings"
       set_guidance_boilerplate: "Change Guidance/Suggested Responses"
       token_hint: "The following tokens will be expanded out to the Plan values: [%{tokens}]"
@@ -209,15 +209,15 @@ en:
       number: "Number"
       add_question: "Add Question"
       make_copy: "Duplicate"
-      make_checklist: "Set as DCC Checklist"
-      checklist: "DCC Checklist"
+      make_checklist: "Set as ANDS Template"
+      checklist: "ANDS Template"
       select_checklist: "Pick from checklist"
       question_created: "Question was successfully created."
       question_updated: "Question was successfully updated."
       mapping_text_updated: "Mapping text was successfully updated."
       mapping_text: "Mapping Texts"
       not_unpublished: "The template has been published."
-      select_checklist_first: "You need to set a DCC Checklist version to base this set of questions on before you can add any questions to this template version"
+      select_checklist_first: "You need to set an ANDS Template version to base this set of questions on before you can add any questions to this template version"
       from_checklist: "Build question set from DCC Checklist"
       already_has_questions: "Questions have already been added to this template edition, so it can't be built on the DCC Checklist"
       pipe_separated: "This is a pipe-separated list of values ('|'). Boolean yes and no should be entered as 1 and 0."
@@ -237,7 +237,7 @@ en:
         old: "Old"
 
     types:
-      mapped: "Mapped to DCC Checklist"
+      mapped: "Mapped to ANDS Template"
       text: "Text"
       boolean: "Yes/No"
       heading: "Heading"
