Added Turtle RDF export framework (requires RDF.rb, rdf-raptor.rb and raptor libraries)
Work in progress

--- a/config/locales/dmp.en.yml
+++ b/config/locales/dmp.en.yml
@@ -396,7 +396,7 @@ en:
       other: "Other"
 
     formats:
-      rdf: ".RDF (Metadata)"
+      ttl: ".TTL (Turtle RDF)"
       pdf: ".PDF"
       html: ".HTML"
       csv: ".CSV"
